// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getButtonAriaAttributes() should return correct aria attributes for isOpen: false, labelId: 'label-id' and dropdownId: 'dropdown-id' 1`] = `
Object {
  "aria-controls": "dropdown-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getButtonAriaAttributes() should return correct aria attributes for isOpen: true, labelId: 'label-id' and dropdownId: 'dropdown-id' 1`] = `
Object {
  "aria-controls": "dropdown-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: false, labelId: 'label-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
Object {
  "aria-autocomplete": "list",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: false, labelId: 'label-id', dropdownId: 'dropdown-id' and activeDescendantId: 1 1`] = `
Object {
  "aria-autocomplete": "list",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: true, labelId: 'label-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
Object {
  "aria-activedescendant": "option-0",
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false}] and hasFilter: false 1`] = `
Object {
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false}] and hasFilter: true 1`] = `
Object {
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true}] and hasFilter: false 1`] = `
Object {
  "aria-activedescendant": "option-1",
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true}] and hasFilter: true 1`] = `
Object {
  "aria-label": "Some label",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":true,"highlighted":true} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":true,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":true,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":true,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": "true",
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": null,
}
`;
